# overseer

./: .dockerignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  install_dependencies.sh
include/overseer/: overseer.hpp
include/overseer/sensory/: input.hpp  pathway.hpp  sense.hpp  signal.hpp
include/overseer/vision/: image.hpp  visual_memory.hpp
src/: main.cpp  overseer.cpp
src/sensory/: input.cpp  pathway.cpp  sense.cpp  signal.cpp
src/vision/: image.cpp  visual_memory.cpp
tests/: CMakeLists.txt  test_main.cpp
